--- a/v3/borrow/borrow.4.html
+++ b/v3/borrow/borrow.4.html
@@ -65,7 +65,7 @@
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row g-5">
                     <div class="col-12 col-lg-7 col-xxl-6">
-                        <div class="bg-body p-3 rounded shadow">
+                        <div class="bg-body p-3 rounded border shadow">
                             <h2 class="mb-4">Borrow</h2>
                             <div class="d-flex border align-items-center p-3 rounded mb-2">
                                 <div class="flex-grow-1">
@@ -82,8 +82,8 @@
                             </div>
                             <div class="d-flex flex-wrap justify-content-between mb-4">
                                 <div>
-                                    <div class="mb-1">Emprunt maximal : <span class="text-body-tertiary">800 USDC</span></div>
-                                    <a href="#" class="text-decoration-none">Augmenter votre capacité d'emprunt <i class="bi bi-arrow-right"></i></a>
+                                    <div class="mb-1">Maximum borrowing : <span class="text-body-tertiary">800 USDC</span></div>
+                                    <a href="#" class="text-decoration-none">Increase your borrowing capacity <i class="bi bi-arrow-right"></i></a>
                                 </div>
                                 <div class="d-flex align-items-start">
                                     <small class="px-2 py-1 me-1 shadow-sm rounded">Borrow APR : <span class="text-body-tertiary">4.12%</span></small>
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-4 col-xxl-3">
-                        <div class="bg-body p-3 rounded shadow">
+                        <div class="bg-body p-3 rounded border shadow">
                             <h4 class="mb-4">Your positions</h4>
                             <table class="table table-borderless align-middle">
                                 <tbody>
