--- a/v3/borrow/collateral.6.html
+++ b/v3/borrow/collateral.6.html
@@ -64,21 +64,27 @@
             </div>
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row">
-                    <div class="col-12 col-lg-7 col-xxl-6">
-                        <div class="bg-body p-4 pt-3 rounded shadow">
-                            <div class="d-flex align-items-center">
-                                <h2 class="mb-1 me-auto">Collateral</h2>
-                                <button type="button" class="btn-close" aria-label="Close"></button>
+                    <div class="col-12 col-lg-8 col-xxl-7">
+                        
+                            <div class="bg-body shadow border rounded p-3 mb-5">
+                                <div class="d-flex align-items-center">
+                                    <h2 class="mb-1 me-auto">Collateral</h2>
+                                    <div class="d-flex ms-auto me-3">
+                                        <div class="text-body d-flex align-items-center py-2 mx-3 border-bottom border-5 border-primary" style="cursor: pointer;"><img src="../../image/assets/ETH.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> ETH <span class="text-body-tertiary ps-1">Market</span></div>
+                                        <div class="text-body d-flex align-items-center py-2 mx-3 border-bottom border-5 border-light" style="cursor: pointer;" aria-current="page"><img src="../../image/assets/USDC.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> USDC <span class="text-body-tertiary ps-1">Market</span></div>
+                                    </div>
+                                    <button type="button" class="btn-close" aria-label="Close"></button>
+                                </div>
+                                <div class="">ETH <span class="text-body-secondary">Market</span> : <span class="text-body-tertiary">$3.40K</span></div>
                             </div>
-                            <div class="text-body-tertiary fs-5 mb-4">ETH Market</div>
 
-                            <div class="shadow rounded p-3 mb-4">
+                            <div class="bg-body shadow border rounded p-3 mb-4">
                                 <div class="d-flex justify-content-between align-items-start mb-4">
                                     <div class="d-flex align-items-center justify-content-start">
                                         <img src="../../image/assets/wstETH.svg" alt="USDC" width="48">
                                         <div style="padding-left: 0.7rem;">
-                                            <div class="fs-5 fw-medium">wstETH</div>
-                                            <div class="fs-6 text-body-secondary">Lido wrapped staked ether</div>
+                                            <div class="fs-5 fw-semibold">wstETH</div>
+                                            <div class="text-body-secondary">Lido wrapped staked ether</div>
                                         </div>
                                     </div>
                                     <div class="text-center">
@@ -87,8 +93,8 @@
                                         <div class="text-body-tertiary" style="font-size: 75%;">$3.40K</div>
                                     </div>
                                     <div class="d-flex flex-column">
-                                        <button type="button" class="btn btn-primary text-white btn-sm mb-2">Deposit</button>
-                                        <button type="button" class="btn btn-primary text-white btn-sm">Withdraw</button>
+                                        <button type="button" class="btn btn-primary text-white mb-2">Deposit</button>
+                                        <button type="button" class="btn btn-primary text-white">Withdraw</button>
                                     </div>
                                 </div>
                                 <div class="d-flex text-body-secondary text-center small">
@@ -97,32 +103,31 @@
                                 </div>
                             </div>
 
-                            <div class="shadow rounded p-3">
-                                <div class="d-flex justify-content-between align-items-center mb-3">
+                            <div class="bg-body shadow border rounded p-3">
+                                <div class="d-flex justify-content-between align-items-start mb-4">
                                     <div class="d-flex align-items-center justify-content-start">
-                                        <img src="../../image/assets/cbETH.svg" alt="USDC" width="40">
-                                        <div class="ps-2">
-                                            <div>cbETH</div>
-                                            <small class="text-body-tertiary">Coinbase wrapped staked ether</small>
+                                        <img src="../../image/assets/cbETH.svg" alt="USDC" width="48">
+                                        <div style="padding-left: 0.7rem;">
+                                            <div class="fs-5 fw-semibold">cbETH</div>
+                                            <div class="text-body-secondary">Coinbase wrapped staked ether</div>
                                         </div>
                                     </div>
                                     <div class="text-center">
-                                        <div>Your balance</div> 
-                                        <div class="text-body-tertiary">0 <small class="opacity-75 ps-2">($0)</small></div>
+                                        <div class="fw-medium">Your balance</div> 
+                                        <div class="text-body-secondary">0</div>
+                                        <div class="text-body-tertiary" style="font-size: 75%;">$0</div>
                                     </div>
                                     <div class="d-flex flex-column">
-                                        <button type="button" class="btn btn-primary text-white btn-sm mb-2">Deposit</button>
-                                        <button type="button" class="btn btn-primary text-white btn-sm">Withdraw</button>
+                                        <button type="button" class="btn btn-primary text-white mb-2">Deposit</button>
+                                        <button type="button" class="btn btn-primary text-white">Withdraw</button>
                                     </div>
                                 </div>
                                 <div class="d-flex text-body-secondary text-center small">
                                     <div class="flex-fill border-end p-2">Loan to value : <span class="opacity-75">80%</span></div>
-                                    <div class="flex-fill border-end p-2">Liquidation threshold : <span class="opacity-75">85%</span></div>
-                                    <div class="flex-fill p-2">Liquidation penalty : <span class="opacity-75">10%</span></div>
+                                    <div class="flex-fill p-2">Liquidation threshold : <span class="opacity-75">85%</span></div>
                                 </div>
                             </div>
 
-                        </div>
                     </div>
                 </div>
             </div>
