--- a/v3/farm/assets-list.7.html
+++ b/v3/farm/assets-list.7.html
@@ -60,17 +60,21 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 ms-lg-auto p-5">
-                <h2 class="mb-4">Farm</h2> 
+            <div class="col-12 col-lg-10 ms-lg-auto p-5">               
                 <div class="row">
-                    <div class="col-12 col-lg-7">
+                    <div class="col-12 col-lg-9">
+                        <div class="d-flex align-items-center p-3 bg-body border rounded shadow mb-4">
+                            <h2 class="m-0">Farm</h2> 
+                            <div class="fs-5 text-body-tertiary ms-auto pe-2">Deposit your assets and earn fees</div>
+                        </div>
                         <div class="row text-body-secondary px-3 mb-3">
                             <div class="col text-start">Asset</div>
                             <div class="col text-center">Total deposits</div>
                             <div class="col text-center">Your balance</div>                            
                             <div class="col text-center">APR</div>
+                            <div class="col text-center">Action</div>
                         </div>
-                        <div class="asset-item row align-items-center px-3 py-4 mb-4 bg-body rounded shadow">
+                        <div class="row align-items-center p-3 mx-1 mb-4 bg-body border rounded shadow">
                             <div class="col">
                                 <div class="d-flex justify-content-start">
                                     <img src="../../image/assets/USDC.svg" alt="USDC" width="42">
@@ -91,8 +95,14 @@
                             <div class="col text-center">
                               7.12<small class="text-body-secondary">%</small> <i class="bi bi-info-square text-body-tertiary ms-1"></i>
                             </div>
+                            <div class="col">
+                                <div class="d-flex flex-column">
+                                    <button type="button" class="btn btn-primary text-white mb-2">Deposit</button>
+                                    <button type="button" class="btn btn-primary text-white">Withdraw</button>
+                                </div>
+                            </div>
                         </div>
-                        <div class="asset-item row align-items-center px-3 py-4 bg-body rounded shadow">
+                        <div class="row align-items-center mx-1 p-3 bg-body border rounded shadow">
                             <div class="col">
                                 <div class="d-flex justify-content-start">
                                     <img src="../../image/assets/ETH.svg" alt="ETH" width="42">
@@ -112,6 +122,12 @@
                             </div>
                             <div class="col text-center">
                               2.17<small class="text-body-secondary">%</small> <i class="bi bi-info-square text-body-tertiary ms-1"></i>
+                            </div>
+                            <div class="col">
+                                <div class="d-flex flex-column">
+                                    <button type="button" class="btn btn-primary text-white mb-2">Deposit</button>
+                                    <button type="button" class="btn btn-primary text-white">Withdraw</button>
+                                </div>
                             </div>
                         </div>
                     </div>
