--- a/index.html
+++ b/index.html
@@ -12,22 +12,19 @@
       <div class="bg-white p-5 my-5 rounded shadow">
         <h1>Compound Proto</h1>
         <ul class="mb-5">
-          <li><a href="template/template.html">General template</a></li>
-          <li><a href="template/template.2.html">General template - Not connected</a></li>
-          <li><a href="template/template.4.html">General template - Connected #1</a></li>
-          <li><a href="template/template.5.html">General template - Connected #2</a></li>
-          <li><a href="template/template.6.html">General template - Connected #3</a></li>
+          <li><a href="template/template.html">General template - Not connected</a></li>
+          <li><a href="template/template.5.html">General template - Connected</a></li>
         </ul>
 
         <h2>Compound III</h2>
         <ul>
           <li>Borrow
             <ul>
-              <li><a href="v3/borrow/borrow.2.html">Main #1</a></li>
-              <li><a href="v3/borrow/borrow.4.html">Main #2</a></li>
-              <li><a href="v3/borrow/select-asset.4.html">Select asset</a></li>
-              <li><a href="v3/borrow/collateral.4.html">Manage collateral #1</a></li>
-              <li><a href="v3/borrow/collateral.5.html">Manage collateral #2</a></li>
+              <li><a href="v3/borrow/borrow.2.html">Borrow #1</a></li>
+              <li><a href="v3/borrow/borrow.4.html">Borrow #2</a></li>
+              <li><a href="v3/borrow/collateral.5.html">Manage collateral #1</a></li>
+              <li><a href="v3/borrow/collateral.6.html">Manage collateral #2</a></li>
+              <li><a href="v3/borrow/select-asset.6.html">Select asset</a></li>
             </ul>
           </li>
         </ul>
@@ -36,7 +33,9 @@
           <li>Farm
             <ul>
               <li><a href="v3/farm/assets-list.3.html">Assets list #1</a></li>
-              <li><a href="v3/farm/assets-list.4.html">Assets list #2</a></li>
+              <li><a href="v3/farm/assets-list.5.html">Assets list #2</a></li>
+              <li><a href="v3/farm/assets-list.7.html">Assets list #3</a></li>
+              <li><a href="v3/farm/assets-list.8.html">Assets list #4</a></li>
               <li><a href="v3/farm/supply.html">Supply #1</a></li>
               <li><a href="v3/farm/supply.3.html">Supply #2</a></li>
               <li><a href="v3/farm/withdraw.html">Withdraw #1</a></li>
