--- a/v3/claim/claim.3.html
+++ b/v3/claim/claim.3.html
@@ -65,7 +65,7 @@
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row">
                     <div class="col-12 col-lg-7 col-xxl-6">
-                        <div class="bg-body p-4 pt-3 rounded shadow">
+                        <div class="bg-body p-4 pt-3 rounded border shadow">
                             <div class="d-flex justify-content-between mb-3">
                               <h2 class="m-0">Claim</h2>
                               <div class="small text-center">
