--- a/v3/farm/assets-list.8.html
+++ b/v3/farm/assets-list.8.html
@@ -63,9 +63,9 @@
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
 
                 <div class="row">
-                    <div class="col-12 col-lg-8 col-xxl-6">
+                    <div class="col-12 col-lg-9 col-xxl-6">
                         <div class="bg-body bg-opacity-75 p-3 rounded border shadow">
-                            <div class="d-flex align-items-center mb-4">
+                            <div class="d-flex align-items-center" style="margin-bottom: 2.5rem">
                                 <h2 class="m-0">Farm</h2> 
                                 <div class="fs-5 text-body-tertiary ms-auto pe-2">Deposit your assets and earn fees</div>
                             </div>
@@ -84,10 +84,13 @@
                                         <div class="col text-center">
                                           APR
                                         </div>
+                                        <div class="col text-center">
+                                            Action
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="asset-item row align-items-center px-3 py-4 mx-1 mb-4 bg-body rounded shadow">
+                            <div class="row align-items-center p-3 mx-1 mb-4 bg-body rounded shadow">
                                 <div class="col">
                                     <div class="d-flex justify-content-start">
                                         <img src="../../image/assets/USDC.svg" alt="USDC" width="42">
@@ -108,8 +111,14 @@
                                 <div class="col text-center">
                                   7.12<small class="text-body-secondary">%</small> <i class="bi bi-info-square text-body-tertiary ms-1"></i>
                                 </div>
+                                <div class="col">
+                                    <div class="d-flex flex-column">
+                                        <button type="button" class="btn btn-primary text-white mb-2">Deposit</button>
+                                        <button type="button" class="btn btn-primary text-white">Withdraw</button>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="asset-item row align-items-center px-3 py-4 mx-1 mb-3 bg-body rounded  shadow">
+                            <div class="row align-items-center p-3 mx-1 mb-3 bg-body rounded  shadow">
                                 <div class="col">
                                     <div class="d-flex justify-content-start">
                                         <img src="../../image/assets/ETH.svg" alt="ETH" width="42">
@@ -129,6 +138,12 @@
                                 </div>
                                 <div class="col text-center">
                                   2.17<small class="text-body-secondary">%</small> <i class="bi bi-info-square text-body-tertiary ms-1"></i>
+                                </div>
+                                <div class="col">
+                                    <div class="d-flex flex-column">
+                                        <button type="button" class="btn btn-primary text-white mb-2">Deposit</button>
+                                        <button type="button" class="btn btn-primary text-white">Withdraw</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
