--- a/v3/farm/supply.3.html
+++ b/v3/farm/supply.3.html
@@ -65,11 +65,11 @@
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row">
                     <div class="col-12 col-lg-5">
-                        <div class="card shadow">
+                        <div class="card shadow border shadow">
                             <div class="card-header">
                               <ul class="nav nav-tabs card-header-tabs">
                                 <li class="nav-item">
-                                  <a class="nav-link fw-semibold active" aria-current="true" href="#">Supply USDC</a>
+                                  <a class="nav-link active" aria-current="true" href="#">Supply USDC</a>
                                 </li>
                                 <li class="nav-item me-auto">
                                   <a class="nav-link" href="#">Withdraw USDC</a>
