--- a/v3/farm/withdraw.2.html
+++ b/v3/farm/withdraw.2.html
@@ -65,14 +65,14 @@
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row">
                     <div class="col-12 col-lg-5">
-                        <div class="card shadow">
+                        <div class="card border shadow">
                             <div class="card-header">
                               <ul class="nav nav-tabs card-header-tabs">
                                 <li class="nav-item">
                                   <a class="nav-link" aria-current="true" href="#">Supply USDC</a>
                                 </li>
                                 <li class="nav-item me-auto">
-                                  <a class="nav-link fw-semibold active" href="#">Withdraw USDC</a>
+                                  <a class="nav-link active" href="#">Withdraw USDC</a>
                                 </li>
                                 <li class="nav-item align-self-center">
                                     <button type="button" class="btn-close" aria-label="Close"></button>
