--- a/v3/farm/withdraw.html
+++ b/v3/farm/withdraw.html
@@ -65,7 +65,7 @@
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row">
                     <div class="col-12 col-lg-5">
-                        <div class="bg-body p-3 rounded shadow mb-4">
+                        <div class="bg-body p-3 rounded border shadow">
                             <div class="d-flex align-items-center mb-4">
                                 <h2 class="me-auto">Withdraw</h2>
                                 <button type="button" class="btn-close" aria-label="Close"></button>
