--- a/index.html
+++ b/index.html
@@ -13,17 +13,15 @@
         <h1>Compound Proto</h1>
         <ul class="mb-5">
           <li><a href="template/template.html">General template - Not connected</a></li>
-          <li><a href="template/template.5.html">General template - Connected</a></li>
+          <li><a href="template/template.7.html">General template - Connected</a></li>
         </ul>
 
         <h2>Compound III</h2>
         <ul>
           <li>Borrow
             <ul>
-              <li><a href="v3/borrow/borrow.2.html">Borrow #1</a></li>
-              <li><a href="v3/borrow/borrow.4.html">Borrow #2</a></li>
-              <li><a href="v3/borrow/collateral.5.html">Manage collateral #1</a></li>
-              <li><a href="v3/borrow/collateral.6.html">Manage collateral #2</a></li>
+              <li><a href="v3/borrow/borrow.4.html">Borrow</a></li>
+              <li><a href="v3/borrow/collateral.6.html">Manage collateral</a></li>
               <li><a href="v3/borrow/select-asset.6.html">Select asset</a></li>
             </ul>
           </li>
@@ -32,12 +30,8 @@
         <ul>
           <li>Farm
             <ul>
-              <li><a href="v3/farm/assets-list.3.html">Assets list #1</a></li>
-              <li><a href="v3/farm/assets-list.5.html">Assets list #2</a></li>
-              <li><a href="v3/farm/assets-list.7.html">Assets list #3</a></li>
-              <li><a href="v3/farm/assets-list.8.html">Assets list #4</a></li>
-              <li><a href="v3/farm/supply.html">Supply #1</a></li>
-              <li><a href="v3/farm/supply.3.html">Supply #2</a></li>
+              <li><a href="v3/farm/assets-list.7.html">Assets list</a></li>
+              <li><a href="v3/farm/supply.html">Supply</a></li>
               <li><a href="v3/farm/withdraw.html">Withdraw #1</a></li>
               <li><a href="v3/farm/withdraw.2.html">Withdraw #2</a></li>              
             </ul>
