--- a/v3/borrow/collateral.6.html
+++ b/v3/borrow/collateral.6.html
@@ -9,7 +9,7 @@
   </head>
   <body class="bg-body-tertiary">
 
-    <nav class="navbar navbar-expand-lg sticky-top bg-white shadow-sm py-3">
+    <nav class="navbar navbar-expand-xl sticky-top bg-white border-bottom shadow-sm py-3">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="../../image/compound-logo.svg" alt="Compound" width="180">
@@ -22,15 +22,34 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Borrow</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#">Lend</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Dashboard</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Farm</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Claim</a></li>
                 </ul>
-                <div class="btn-group shadow-sm ms-auto" role="group">
+                <div class="d-none d-xl-flex mx-auto text-center">
+                    <div class="px-4">
+                        <div class="fw-semibold">Collateral</div> 
+                        <div class="text-body-secondary">$3.12K</div>
+                    </div>
+                    <div class="px-4">
+                        <div class="fw-semibold">Borrowing</div> 
+                        <div class="text-body-secondary">$1.78K</div>
+                    </div>
+                    <div class="px-4">
+                        <div class="fw-semibold">Farming</div> 
+                        <div class="text-body-secondary">$2.78K</div>
+                    </div>
+                    <div class="px-4">
+                        <div class="fw-semibold text-primary">Rewards</div> 
+                        <div class="">12.898 <span class="" style="font-size: 75%">COMP</span></div>
+                    </div>
+                </div>
+                <div class="btn-group shadow-sm" role="group">
                     <button type="button" class="btn btn-outline-primary">Compound II</button>
                     <button type="button" class="btn btn-primary text-white" aria-current="page">Compound III</button>
                 </div>
-                <div class="d-none d-lg-block ms-2">
-                    <button class="btn btn-outline-primary shadow-sm" type="button"><i class="bi bi-wallet me-1"></i> Connect wallet</button>
+                <div class="d-none d-lg-block ms-4">
+                    <button class="btn btn-primary text-white shadow-sm" type="button"><i class="bi bi-wallet me-1"></i> 0x23....46ac</button>
+                    <button class="btn btn-primary text-white shadow-sm" type="button"><i class="bi bi-power"></i></button>
                 </div>
             </div>
         </div>
@@ -38,7 +57,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div id="sidebar-container" class="col-lg-2 d-none d-lg-block bg-white shadow">
+            <div id="sidebar-container" class="col-lg-2 d-none d-lg-block bg-white border-end shadow">
                 <div id="sidebar-inner" class="d-flex flex-column p-3 pt-5">
                     <button id="network-select" type="button" class="btn btn-light btn-lg border shadow-sm">
                         <div class="d-flex">
@@ -62,24 +81,25 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 ms-lg-auto p-5">
+            <div class="col-12 col-lg-10 ms-lg-auto p-3 p-lg-5">
                 <div class="row">
                     <div class="col-12 col-lg-8 col-xxl-7">
                         
-                            <div class="bg-body shadow border rounded p-3 mb-5">
-                                <div class="d-flex align-items-center">
-                                    <h2 class="mb-1 me-auto">Collateral</h2>
-                                    <div class="d-flex ms-auto me-3">
-                                        <div class="text-body d-flex align-items-center py-2 mx-3 border-bottom border-5 border-primary" style="cursor: pointer;"><img src="../../image/assets/ETH.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> ETH <span class="text-body-tertiary ps-1">Market</span></div>
-                                        <div class="text-body d-flex align-items-center py-2 mx-3 border-bottom border-5 border-light" style="cursor: pointer;" aria-current="page"><img src="../../image/assets/USDC.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> USDC <span class="text-body-tertiary ps-1">Market</span></div>
+                            <div class="bg-body shadow border rounded p-4 mb-5">
+                                <div class="d-flex flex-wrap align-items-center">
+                                    <div>
+                                        <h2 class="mb-1 me-auto">Collateral</h2>
+                                        <div class="">ETH <span class="text-body-secondary">Market</span> : <span class="text-body-tertiary">$3.40K</span></div>
                                     </div>
+                                    <div class="d-flex flex-wrap ms-auto me-4">
+                                        <div class="text-body d-flex align-items-center py-2 mx-3 border-bottom border-5 border-primary" style="padding-bottom: 0.75rem !important; cursor: pointer;"><img src="../../image/assets/ETH.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> ETH <span class="text-body-tertiary ps-1">Market</span></div>
+                                        <div class="text-body d-flex align-items-center py-2 mx-3 border-bottom border-5" style="padding-bottom: 0.75rem !important; border-bottom-color: transparent !important; cursor: pointer;" aria-current="page"><img src="../../image/assets/USDC.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> USDC <span class="text-body-tertiary ps-1">Market</span></div>                                    </div>
                                     <button type="button" class="btn-close" aria-label="Close"></button>
                                 </div>
-                                <div class="">ETH <span class="text-body-secondary">Market</span> : <span class="text-body-tertiary">$3.40K</span></div>
                             </div>
 
                             <div class="bg-body shadow border rounded p-3 mb-4">
-                                <div class="d-flex justify-content-between align-items-start mb-4">
+                                <div class="d-flex flex-wrap justify-content-between align-items-start mb-4">
                                     <div class="d-flex align-items-center justify-content-start">
                                         <img src="../../image/assets/wstETH.svg" alt="USDC" width="48">
                                         <div style="padding-left: 0.7rem;">
@@ -104,7 +124,7 @@
                             </div>
 
                             <div class="bg-body shadow border rounded p-3">
-                                <div class="d-flex justify-content-between align-items-start mb-4">
+                                <div class="d-flex flex-wrap justify-content-between align-items-start mb-4">
                                     <div class="d-flex align-items-center justify-content-start">
                                         <img src="../../image/assets/cbETH.svg" alt="USDC" width="48">
                                         <div style="padding-left: 0.7rem;">
