--- a/v3/farm/assets-list.7.html
+++ b/v3/farm/assets-list.7.html
@@ -9,7 +9,7 @@
   </head>
   <body class="bg-body-tertiary">
 
-    <nav class="navbar navbar-expand-lg sticky-top bg-white border-bottom shadow-sm py-3">
+    <nav class="navbar navbar-expand-xl sticky-top bg-white border-bottom shadow-sm py-3">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="../../image/compound-logo.svg" alt="Compound" width="180">
@@ -25,25 +25,25 @@
                     <li class="nav-item"><a class="nav-link" href="#">Farm</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Claim</a></li>
                 </ul>
-                <div class="d-flex mx-auto text-center">
-                <div class="px-4">
-                    <div class="fw-semibold">Collateral</div> 
-                    <div class="text-body-secondary">$3.12K</div>
+                <div class="d-none d-xl-flex mx-auto text-center">
+                    <div class="px-4">
+                        <div class="fw-semibold">Collateral</div> 
+                        <div class="text-body-secondary">$3.12K</div>
+                    </div>
+                    <div class="px-4">
+                        <div class="fw-semibold">Borrowing</div> 
+                        <div class="text-body-secondary">$1.78K</div>
+                    </div>
+                    <div class="px-4">
+                        <div class="fw-semibold">Farming</div> 
+                        <div class="text-body-secondary">$2.78K</div>
+                    </div>
+                    <div class="px-4">
+                        <div class="fw-semibold text-primary">Rewards</div> 
+                        <div class="">12.898 <span class="" style="font-size: 75%">COMP</span></div>
+                    </div>
                 </div>
-                <div class="px-4">
-                    <div class="fw-semibold">Borrowing</div> 
-                    <div class="text-body-secondary">$1.78K</div>
-                </div>
-                <div class="px-4">
-                    <div class="fw-semibold">Farming</div> 
-                    <div class="text-body-secondary">$2.78K</div>
-                </div>
-                <div class="px-4">
-                    <div class="fw-semibold text-primary">Rewards</div> 
-                    <div class="">12.898 <span class="" style="font-size: 75%">COMP</span></div>
-                </div>
-                </div>
-                <div class="btn-group shadow-sm" role="group">
+                <div class="my-3 my-lg-auto btn-group shadow-sm" role="group">
                     <button type="button" class="btn btn-outline-primary">Compound II</button>
                     <button type="button" class="btn btn-primary text-white" aria-current="page">Compound III</button>
                 </div>
@@ -81,31 +81,31 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 ms-lg-auto p-5">               
+            <div class="col-12 col-lg-10 ms-lg-auto p-3 p-lg-5">               
                 <div class="row">
                     <div class="col-12 col-lg-9">
-                        <div class="d-flex align-items-center p-4 bg-body border rounded shadow mb-5">
-                            <h2 class="m-0">Farm</h2> 
-                            <div class="fs-5 text-body-tertiary ms-auto pe-2">Deposit your assets and earn fees</div>
+                        <div class="d-flex flex-wrap align-items-center p-4 bg-body border rounded shadow mb-5">
+                            <h2 class="mb-3 mb-sm-0">Farm</h2> 
+                            <div class="fs-5 text-body-tertiary ms-0 ms-sm-auto pe-2">Deposit your assets and earn fees</div>
                         </div>
                         <div class="row text-body-secondary px-3 mb-3">
                             <div class="col text-start">Asset</div>
-                            <div class="col text-center">Total deposits</div>
+                            <div class="col text-center d-none d-md-block">Total deposits</div>
                             <div class="col text-center">Your balance</div>                            
-                            <div class="col text-center">APR</div>
+                            <div class="col text-center d-none d-sm-block">APR</div>
                             <div class="col text-center">Action</div>
                         </div>
                         <div class="row align-items-center p-3 mx-1 mb-4 bg-body border rounded shadow">
                             <div class="col">
                                 <div class="d-flex justify-content-start">
-                                    <img src="../../image/assets/USDC.svg" alt="USDC" width="42">
-                                    <div class="ps-2">
+                                    <img src="../../image/assets/USDC.svg" class="d-none d-sm-block me-2" alt="USDC" width="42">
+                                    <div>
                                         <div class="mb-1">USDC</div>
                                         <small class="text-body-secondary">USD Coin</small>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col text-center">
+                            <div class="col text-center d-none d-md-block">
                                 <div class="mb-1">731.86M</div>
                                 <small class="text-body-secondary">$731.86M</small>
                             </div>
@@ -113,7 +113,7 @@
                                 <div class="mb-1">1.61K</div>
                                 <small class="text-body-secondary">$1.60K</small>
                             </div>
-                            <div class="col text-center">
+                            <div class="col text-center d-none d-sm-block">
                               7.12<small class="text-body-secondary">%</small> <i class="bi bi-info-square text-body-tertiary ms-1"></i>
                             </div>
                             <div class="col">
@@ -126,14 +126,14 @@
                         <div class="row align-items-center mx-1 p-3 bg-body border rounded shadow">
                             <div class="col">
                                 <div class="d-flex justify-content-start">
-                                    <img src="../../image/assets/ETH.svg" alt="ETH" width="42">
-                                    <div class="ps-2">
+                                    <img src="../../image/assets/ETH.svg" class="d-none d-sm-block me-2" alt="ETH" width="42">
+                                    <div>
                                         <div class="mb-1">ETH</div>
                                         <small class="text-body-secondary">Ether</small>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col text-center">
+                            <div class="col text-center d-none d-md-block">
                                 <div class="mb-1">32,357.30</div>
                                 <small class="text-body-secondary">$23.65M</small>
                             </div>
@@ -141,7 +141,7 @@
                                 <div class="mb-1">3.23</div>
                                 <small class="text-body-secondary">$6.54K</small>
                             </div>
-                            <div class="col text-center">
+                            <div class="col text-center d-none d-sm-block">
                               2.17<small class="text-body-secondary">%</small> <i class="bi bi-info-square text-body-tertiary ms-1"></i>
                             </div>
                             <div class="col">
@@ -157,6 +157,6 @@
         </div>
     </div>
 
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
