--- a/v3/farm/withdraw.html
+++ b/v3/farm/withdraw.html
@@ -9,7 +9,7 @@
   </head>
   <body class="bg-body-tertiary">
 
-    <nav class="navbar navbar-expand-lg sticky-top bg-white border-bottom shadow-sm py-3">
+    <nav class="navbar navbar-expand-xl sticky-top bg-white border-bottom shadow-sm py-3">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="../../image/compound-logo.svg" alt="Compound" width="180">
@@ -25,25 +25,25 @@
                     <li class="nav-item"><a class="nav-link" href="#">Farm</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Claim</a></li>
                 </ul>
-                <div class="d-flex mx-auto text-center">
-                <div class="px-4">
-                    <div class="fw-semibold">Collateral</div> 
-                    <div class="text-body-secondary">$3.12K</div>
+                <div class="d-none d-xl-flex mx-auto text-center">
+                    <div class="px-4">
+                        <div class="fw-semibold">Collateral</div> 
+                        <div class="text-body-secondary">$3.12K</div>
+                    </div>
+                    <div class="px-4">
+                        <div class="fw-semibold">Borrowing</div> 
+                        <div class="text-body-secondary">$1.78K</div>
+                    </div>
+                    <div class="px-4">
+                        <div class="fw-semibold">Farming</div> 
+                        <div class="text-body-secondary">$2.78K</div>
+                    </div>
+                    <div class="px-4">
+                        <div class="fw-semibold text-primary">Rewards</div> 
+                        <div class="">12.898 <span class="" style="font-size: 75%">COMP</span></div>
+                    </div>
                 </div>
-                <div class="px-4">
-                    <div class="fw-semibold">Borrowing</div> 
-                    <div class="text-body-secondary">$1.78K</div>
-                </div>
-                <div class="px-4">
-                    <div class="fw-semibold">Farming</div> 
-                    <div class="text-body-secondary">$2.78K</div>
-                </div>
-                <div class="px-4">
-                    <div class="fw-semibold text-primary">Rewards</div> 
-                    <div class="">12.898 <span class="" style="font-size: 75%">COMP</span></div>
-                </div>
-                </div>
-                <div class="btn-group shadow-sm" role="group">
+                <div class="my-3 my-lg-auto btn-group shadow-sm" role="group">
                     <button type="button" class="btn btn-outline-primary">Compound II</button>
                     <button type="button" class="btn btn-primary text-white" aria-current="page">Compound III</button>
                 </div>
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 ms-lg-auto p-5">
+            <div class="col-12 col-lg-10 ms-lg-auto p-3 p-lg-5">
                 <div class="row">
                     <div class="col-12 col-lg-5">
                         <div class="bg-body p-3 rounded border shadow">
