--- a/v3/borrow/borrow.4.html
+++ b/v3/borrow/borrow.4.html
@@ -43,7 +43,7 @@
                         <div class="">12.898 <span class="" style="font-size: 75%">COMP</span></div>
                     </div>
                 </div>
-                <div class="btn-group shadow-sm" role="group">
+                <div class="my-3 my-lg-auto btn-group shadow-sm" role="group">
                     <button type="button" class="btn btn-outline-primary">Compound II</button>
                     <button type="button" class="btn btn-primary text-white" aria-current="page">Compound III</button>
                 </div>
@@ -93,8 +93,8 @@
                                 </div>
                                 <button type="button" class="btn btn-lg btn-light border border-light-subtle rounded-5">
                                     <div class="d-flex align-items-center">
-                                        <img src="../../image/assets/USDC.svg" alt="USDC" width="35"> 
-                                        <span class="px-3">USDC</span> 
+                                        <img src="../../image/assets/USDC.svg" class="me-3 d-none d-sm-block" alt="USDC" width="35"> 
+                                        <span class="me-3">USDC</span> 
                                         <i class="bi bi-chevron-down"></i>
                                     </div>
                                 </button>
