--- a/v3/borrow/collateral.6.html
+++ b/v3/borrow/collateral.6.html
@@ -43,7 +43,7 @@
                         <div class="">12.898 <span class="" style="font-size: 75%">COMP</span></div>
                     </div>
                 </div>
-                <div class="btn-group shadow-sm" role="group">
+                <div class="my-3 my-lg-auto btn-group shadow-sm" role="group">
                     <button type="button" class="btn btn-outline-primary">Compound II</button>
                     <button type="button" class="btn btn-primary text-white" aria-current="page">Compound III</button>
                 </div>
@@ -85,17 +85,16 @@
                 <div class="row">
                     <div class="col-12 col-lg-8 col-xxl-7">
                         
-                            <div class="bg-body shadow border rounded p-4 mb-5">
-                                <div class="d-flex flex-wrap align-items-center">
+                            <div class="bg-body shadow border rounded p-4 mb-5 d-flex flex-wrap align-items-center">
                                     <div>
                                         <h2 class="mb-1 me-auto">Collateral</h2>
-                                        <div class="">ETH <span class="text-body-secondary">Market</span> : <span class="text-body-tertiary">$3.40K</span></div>
+                                        <div>ETH <span class="text-body-secondary">Market</span> : <span class="text-body-tertiary">$3.40K</span></div>
                                     </div>
-                                    <div class="d-flex flex-wrap ms-auto me-4">
-                                        <div class="text-body d-flex align-items-center py-2 mx-3 border-bottom border-5 border-primary" style="padding-bottom: 0.75rem !important; cursor: pointer;"><img src="../../image/assets/ETH.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> ETH <span class="text-body-tertiary ps-1">Market</span></div>
-                                        <div class="text-body d-flex align-items-center py-2 mx-3 border-bottom border-5" style="padding-bottom: 0.75rem !important; border-bottom-color: transparent !important; cursor: pointer;" aria-current="page"><img src="../../image/assets/USDC.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> USDC <span class="text-body-tertiary ps-1">Market</span></div>                                    </div>
+                                    <div class="d-flex ms-0 ms-sm-auto my-3 my-sm-auto me-4">
+                                        <div class="text-body d-flex align-items-center py-2 me-3 border-bottom border-5 border-primary" style="padding-bottom: 0.75rem !important; cursor: pointer;"><img src="../../image/assets/ETH.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> ETH <span class="text-body-tertiary ps-1">Market</span></div>
+                                        <div class="text-body d-flex align-items-center py-2 ms-3 border-bottom border-5" style="padding-bottom: 0.75rem !important; border-bottom-color: transparent !important; cursor: pointer;" aria-current="page"><img src="../../image/assets/USDC.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> USDC <span class="text-body-tertiary ps-1">Market</span></div>                                    
+                                    </div>
                                     <button type="button" class="btn-close" aria-label="Close"></button>
-                                </div>
                             </div>
 
                             <div class="bg-body shadow border rounded p-3 mb-4">
@@ -104,7 +103,7 @@
                                         <img src="../../image/assets/wstETH.svg" alt="USDC" width="48">
                                         <div style="padding-left: 0.7rem;">
                                             <div class="fs-5 fw-semibold">wstETH</div>
-                                            <div class="text-body-secondary">Lido wrapped staked ether</div>
+                                            <div class="text-body-secondary">Lido stETH</div>
                                         </div>
                                     </div>
                                     <div class="text-center">
