--- a/v3/borrow/borrow.4.html
+++ b/v3/borrow/borrow.4.html
@@ -93,8 +93,8 @@
                                 </div>
                                 <button type="button" class="btn btn-lg btn-light border border-light-subtle rounded-5">
                                     <div class="d-flex align-items-center">
-                                        <img src="../../image/assets/USDC.svg" class="me-3 d-none d-sm-block" alt="USDC" width="35"> 
-                                        <span class="me-3">USDC</span> 
+                                        <img src="../../image/assets/USDC.svg" class="me-2 me-sm-3" alt="USDC" width="35"> 
+                                        <span class="me-2 me-sm-3">USDC</span> 
                                         <i class="bi bi-chevron-down"></i>
                                     </div>
                                 </button>
