--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <h1>Compound Proto</h1>
         <ul class="mb-5">
           <li><a href="template/template.html">General template - Not connected</a></li>
-          <li><a href="template/template.7.html">General template - Connected</a></li>
+          <li><a href="template/template.2.html">General template - Connected</a></li>
         </ul>
 
         <h2>Compound III</h2>
         <ul>
           <li>Borrow
             <ul>
-              <li><a href="v3/borrow/borrow.4.html">Borrow</a></li>
-              <li><a href="v3/borrow/collateral.7.html">Manage collateral</a></li>
-              <li><a href="v3/borrow/select-asset.6.html">Select asset</a></li>
+              <li><a href="v3/borrow/borrow.html">Borrow</a></li>
+              <li><a href="v3/borrow/collateral.html">Manage collateral</a></li>
+              <li><a href="v3/borrow/select-asset.html">Select asset</a></li>
             </ul>
           </li>
         </ul>
@@ -30,7 +30,7 @@
         <ul>
           <li>Farm
             <ul>
-              <li><a href="v3/farm/assets-list.7.html">Assets list</a></li>
+              <li><a href="v3/farm/assets-list.html">Farm</a></li>
               <li><a href="v3/farm/supply.html">Supply</a></li>
               <li><a href="v3/farm/withdraw.html">Withdraw #1</a></li>
               <li><a href="v3/farm/withdraw.2.html">Withdraw #2</a></li>              
