--- a/v3/farm/assets-list.html
+++ b/v3/farm/assets-list.html
@@ -92,16 +92,16 @@
                             <div class="col text-start">Asset</div>
                             <div class="col text-center d-none d-md-block">Total deposits</div>
                             <div class="col text-center">Your balance</div>                            
-                            <div class="col text-center d-none d-sm-block">APR</div>
+                            <div class="col text-center">APR</div>
                             <div class="col text-center">Action</div>
                         </div>
                         <div class="row align-items-center p-3 mx-1 mb-4 bg-body border rounded shadow">
-                            <div class="col">
+                            <div class="col p-0">
                                 <div class="d-flex justify-content-start">
                                     <img src="../../image/assets/USDC.svg" class="d-none d-sm-block me-2" alt="USDC" width="42">
                                     <div>
                                         <div class="mb-1">USDC</div>
-                                        <small class="text-body-secondary">USD Coin</small>
+                                        <small class="d-none d-sm-block text-body-secondary">USD Coin</small>
                                     </div>
                                 </div>
                             </div>
@@ -113,10 +113,10 @@
                                 <div class="mb-1">1.61K</div>
                                 <small class="text-body-secondary">$1.60K</small>
                             </div>
-                            <div class="col text-center d-none d-sm-block">
-                              7.12<small class="text-body-secondary">%</small> <i class="bi bi-info-square text-body-tertiary ms-1"></i>
+                            <div class="col text-center">
+                              7.12<small class="text-body-secondary">%</small> <i class="bi bi-info-square text-body-tertiary ms-1 d-none d-sm-inline"></i>
                             </div>
-                            <div class="col">
+                            <div class="col p-0">
                                 <div class="d-flex flex-column">
                                     <button type="button" class="btn btn-primary text-white mb-2">Deposit</button>
                                     <button type="button" class="btn btn-primary text-white">Withdraw</button>
@@ -124,12 +124,12 @@
                             </div>
                         </div>
                         <div class="row align-items-center mx-1 p-3 bg-body border rounded shadow">
-                            <div class="col">
+                            <div class="col p-0">
                                 <div class="d-flex justify-content-start">
                                     <img src="../../image/assets/ETH.svg" class="d-none d-sm-block me-2" alt="ETH" width="42">
                                     <div>
                                         <div class="mb-1">ETH</div>
-                                        <small class="text-body-secondary">Ether</small>
+                                        <small class="d-none d-sm-block text-body-secondary">Ether</small>
                                     </div>
                                 </div>
                             </div>
@@ -141,10 +141,10 @@
                                 <div class="mb-1">3.23</div>
                                 <small class="text-body-secondary">$6.54K</small>
                             </div>
-                            <div class="col text-center d-none d-sm-block">
-                              2.17<small class="text-body-secondary">%</small> <i class="bi bi-info-square text-body-tertiary ms-1"></i>
+                            <div class="col text-center">
+                              2.17<small class="text-body-secondary">%</small> <i class="bi bi-info-square text-body-tertiary ms-1 d-none d-sm-inline"></i>
                             </div>
-                            <div class="col">
+                            <div class="col p-0">
                                 <div class="d-flex flex-column">
                                     <button type="button" class="btn btn-primary text-white mb-2">Deposit</button>
                                     <button type="button" class="btn btn-primary text-white">Withdraw</button>
